# signalforge

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  package-lock.json  package.json  rust-toolchain.toml
apps/web/: package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/events/: page.tsx
apps/web/app/incidents/: page.tsx
apps/web/app/login/: page.tsx
apps/web/app/rules/: page.tsx
apps/web/app/services/[id]/: page.tsx
apps/web/components/: app-shell.tsx  data-table.tsx  severity-badge.tsx
apps/web/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  table.tsx
apps/web/lib/: api.ts  demo-data.ts  use-live-data.ts
crates/common/: Cargo.toml
crates/common/src/: auth.rs  config.rs  dto.rs  error.rs  lib.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs
infra/: rust-service.Dockerfile
infra/postgres/: init.sql
proto/: incidents.proto
scripts/: smoke.ps1
services/api-gateway/: Cargo.toml
services/api-gateway/src/: main.rs
services/incident-service/: Cargo.toml
services/incident-service/src/: main.rs
services/ingest-service/: Cargo.toml
services/ingest-service/src/: main.rs
services/notify-service/: Cargo.toml
services/notify-service/src/: main.rs
services/rules-engine/: Cargo.toml
services/rules-engine/src/: main.rs
