[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/telemetry",
    "services/api-gateway",
    "services/ingest-service",
    "services/rules-engine",
    "services/incident-service",
    "services/notify-service",
]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://example.invalid/signalforge"
rust-version = "1.93"

[workspace.dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.9", features = ["macros"] }
chrono = { version = "0.4.42", features = ["serde"] }
jsonwebtoken = "10.2.0"
opentelemetry = "0.32.0"
opentelemetry-otlp = "0.32.0"
rdkafka = { version = "0.39.0", features = ["cmake-build"] }
redis = { version = "1.2.1", features = ["tokio-comp"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
thiserror = "2.0.17"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "signal"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tonic = "0.14.6"
tonic-build = "0.14.6"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }
