[package]
name = "api-gateway"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
serde_json.workspace = true
signalforge-common = { path = "../../crates/common" }
signalforge-telemetry = { path = "../../crates/telemetry" }
tokio.workspace = true
tokio-stream.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true
