[package]
name = "notify-service"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
rdkafka.workspace = true
signalforge-common = { path = "../../crates/common" }
signalforge-telemetry = { path = "../../crates/telemetry" }
tokio.workspace = true
tracing.workspace = true

